# python-namespace-demo-app2

./: README.md  pyproject.toml
src/namespace_demo/: main_app2.py
src/namespace_demo/app2/: add_space.py
